--- a/pages/about_style.css
+++ b/pages/about_style.css
@@ -67,3 +67,32 @@ th, td {
         font-size: 15px;
     }
 }
+.slokam{
+    margin: 20px 0;
+    align-items: center;
+    text-align: center;
+}
+.slokam p{
+    /* text-align: center; */
+    font-size: 20px;
+    line-height: 2.5;
+    color: rgb(47, 48, 58);
+}
+
+@media(max-width: 500px){
+    .slokam p{
+        font-size: 16px;
+        font-weight: 600;
+    }
+}
+
+@media(max-width: 408px){
+    .slokam p{
+        font-size: 14px;
+    }
+}
+
+hr{
+    border: 1px solid rgb(150, 150, 150);
+    margin: 20px 0;
+}
