--- a/pages/activities_style.css
+++ b/pages/activities_style.css
@@ -2,9 +2,16 @@
     text-align: center;
     margin: 15px 0;
     color: rgb(48, 48, 48);
+    animation: act 1s;
+}
+@keyframes act{
+    0%{
+        transform: translateY(100px);
+    }
 }
 
 .act-images-container {
+    animation: act 3s;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); /* Adjust minmax values as needed */
     grid-gap: 20px;
