--- a/pages/activities_style.css
+++ b/pages/activities_style.css
@@ -20,10 +20,13 @@
     margin-right: 10px;
     margin-left: 10px;
 }
+@media (max-width: 556px){
+    .act-images-container{
+        grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    }
+}
 .act-images-container img{
-    width: 100%; 
-    /* height: auto; */
-    /* border: 2px solid #000; */
+    width: 100%;
     transition: transform 0.3s ease;
 }
 .act-images-container img:hover {
