--- a/pages/media_style.css
+++ b/pages/media_style.css
@@ -17,7 +17,8 @@
     background-color: rgb(162, 235, 255);
     border: 3px solid rgb(34, 30, 95);
     border-radius: 10px;
-    box-shadow: 3px 5px 7px 0 rgba(0, 0, 0, 0.228);
+    box-shadow: 5px 5px 7px 0 rgba(0, 0, 0, 0.228);
+    transition: .2s ease;
 }
 .candidate h2{
     text-align: center;
@@ -45,4 +46,21 @@
     .candidate h2{
         font-size: 16px;
     }
+}
+.profile-intro{
+    margin: 10px 0;
+}
+.profile-intro h1{
+    text-align: center;
+    color: rgb(14, 0, 93);
+}
+@media(max-width:490px){
+    .profile-intro h1{
+        font-size: 23px;
+    }
+}
+
+.candidate:hover{
+    transform: translateY(-15px);
+    box-shadow: 5px 16px 7px 0 rgba(0, 0, 0, 0.228);
 }
