--- a/pages/about_style.css
+++ b/pages/about_style.css
@@ -219,3 +219,9 @@ hr{
         height: 400px;
     }
 }
+@media(max-width:1030px){
+    .about-matter img{
+        width: 500px;
+        height: 500px;
+    }
+}
