--- a/style_index.css
+++ b/style_index.css
@@ -1,6 +1,6 @@
 body{
-    /* background-image: url('/images/bg.png'); */
-    background: linear-gradient(-45deg, rgb(13, 13, 240), rgb(0, 255, 17));
+    background-image: url('/images/crowd2.jpg');
+    /* background: linear-gradient(-45deg, rgb(13, 13, 240), rgb(0, 255, 17)); */
 }
 .main-page-image{
     display: flex;
