--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body{
 }
 .greenline{
     padding: 20px 0;
-    background-color: #039b1f;
+    background-color: rgb(0, 183, 12);
 }
 .social-elements{
     position: absolute;
