--- a/style.css
+++ b/style.css
@@ -135,3 +135,73 @@ nav span{
         font-size: 13px;
     }
 }
+
+.footer-curl{
+    background-image: url('/images/cur1.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-color: #ffffff;
+    padding-bottom: 6%;
+}
+.footer-info{
+    /* background-color: #052aaf; */
+    background: linear-gradient(to bottom, #052aaf, #031722);
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+}
+.foot-data{
+    color: #ffffff;
+    margin: 20px 6%;
+}
+.foot-data li a{
+    text-decoration: none;
+    color: #ffffff;
+    font-weight: 500;
+    transform: translateX(0px);
+    transition: transform 0.2s ease;
+}
+.foot-data li{
+    transition: transform 0.4s ease;
+    padding: 5px 0;
+    
+}
+.foot-data ul{
+    list-style-type: none;
+}
+.foot-data h3{
+    color: #ffffff;
+    padding: 10px 0;
+    /* word-spacing: 10px; */
+}
+.foot-data li a:hover{
+    color: #1ad26a;
+    /* transform: translateX(15px); */
+}
+.foot-data li:hover{
+    transform: translateX(10px);
+}
+.social-icons a{
+    font-size: 23px;
+}
+.social-icons{
+    padding-left: 18%;
+    /* text-align: center; */
+    /* align-items: center; */
+    /* justify-content: center; */
+}
+.foot-data h2{
+    color: #35f912;
+}
+@media(max-width:617px){
+    .social-icons{
+        padding-left: 0;
+    }
+}
+
+nav.fixed{
+    position: fixed;
+    /* padding-bottom: 100px; */
+    width: 100%;
+    top: 0;
+    z-index: 999;
+}
