--- a/pages/contact_style.css
+++ b/pages/contact_style.css
@@ -1,3 +1,13 @@
-body{
-    background: linear-gradient(130deg, rgb(49, 212, 253), rgba(229, 255, 252, 0.804), rgba(42, 205, 238, 0.927));
+section, .curve{
+    /* padding-top: 500px; */
+    background: linear-gradient(180deg, rgb(255, 255, 255), rgb(232, 251, 255), rgb(210, 247, 255), rgb(236, 244, 246), rgb(255, 255, 255));
+}
+
+.curve{
+    background-image: url('/images/dbclr1.png');
+    /* background-image: url('/images/cur1.png'); */
+    background-size: 80%;
+    opacity: 0.2;
+    background-repeat: no-repeat;
+    padding: 10% 0;
 }
