--- a/pages/about_style.css
+++ b/pages/about_style.css
@@ -71,7 +71,9 @@ th, td {
 }
 
 .about-matter{
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    /* grid-template-columns:  0fr 1fr 1fr 1fr; */
     background-color: #ffffff;
     border: 2px solid rgb(255, 255, 255);
     /* padding: 20px; */
@@ -79,32 +81,84 @@ th, td {
     padding-bottom: 40px;
     /* font-size: 18px; */
     text-align: justify;
-    justify-content: space-between;
+    justify-content: space-around;
     background-image: url('/images/wav.png');
     background-size: cover;
     /* background-position: 0 -50px; */
     background-repeat: no-repeat;
 }
+.first-img{
+    grid-column: 1 / 2;
+}
+.ab-text{
+    grid-column: 2 / 3;
+}
 .blank-space{
     padding: 10% 0;
 }
 .about-matter img{
-    width: 30%;
+    width: 60%;
     /* height: auto; */
     border-radius: 5px;
     padding-right: 20px;
 }
-.about-matter p{
-    font-weight: 600;
-    color: rgb(63, 63, 63);
-    line-height: 1.8;
+
+.ab-text{
+    /* align-items: center; */
+    /* display: flex; */
+    /* text-align: center; */
 }
-@media(max-width: 450px){
-    .about-matter p{
-        font-weight: 400;
-        font-size: 15px;
+.ab-text h3{
+    font-weight: 400;
+}
+.ab-text h1{
+    font-size: 40px;
+}
+.dream-line{
+    padding: 20px 0;
+    font-weight: 400;
+    font-size: 32px;
+}
+.ab-text > div{
+    padding: 20px 0;
+    border-radius: 30px;
+    background-color: rgb(115, 234, 252);
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px 50px;
+    box-shadow: 2px 5px 7px 0 rgba(0, 0, 0, 0.162);
+    text-align: center;
+    grid-auto-flow: row;
+}
+@media(max-width: 770px){
+    .ab-text > div{
+        gap: 100px;
     }
 }
+
+.counter:nth-child(1) { grid-area: 1 / 1 / 2 / 2; margin-top: 25px;} /* Row 1, Col 1 */
+.counter:nth-child(2) { grid-area: 1 / 2 / 2 / 3; margin-top: 25px;} /* Row 1, Col 2 */
+.counter:nth-child(3) { grid-area: 1 / 3 / 2 / 4; margin-top: 25px;} /* Row 1, Col 3 */
+.counter:nth-child(4) { 
+    grid-area: 2 / 1 / 3 / 3; 
+    justify-self: center; 
+    margin-top: 25px;
+} /* Row 2, Col 1-2 */
+.counter:nth-child(5) {
+    grid-area: 2 / 2 / 3 / 4; 
+    margin-top: 25px;
+}
+/* .counter:nth-child(4) {
+  grid-column: 1 / 3; 
+  justify-content: center;
+}
+
+.counter:nth-child(5) {
+    grid-column: 2 / 4;
+    justify-content: center;
+} */
+
+
 .slokam{
     display: flex;
     justify-content: center;
@@ -196,6 +250,14 @@ hr{
         font-size: 15px;
     }
 }
+@media(max-width:515px){
+    .ab-text > div {
+        gap: 200px;
+    }
+    .counter:nth-child(4) { 
+        gap: 10px 200px;
+    }
+}
 
 .next-matter{
     /* display: flex; */
@@ -241,6 +303,16 @@ hr{
         text-align: center;
         /* align-items: center; */
     }
+    .ab-text > div {
+        display: grid;
+        gap: 50px;
+        /* grid-template-columns: repeat(5, 1fr); */
+    }
+    .ab-text{
+        /* display: flex; */
+        text-align: center;
+        justify-content: center;
+    }
     .about-matter img{
         width: 450px;
         height: auto;
@@ -248,6 +320,14 @@ hr{
     }
     .about-matter p{
         text-align: justify;
+    }
+}
+@media(max-width: 650px){
+    .ab-text h1{
+        font-size: 26px;
+    }
+    .ab-text h3{
+        font-size: 16px;
     }
 }
 @media(max-width:530px){
@@ -260,6 +340,9 @@ hr{
     .about-matter img{
         width: 300px;
         height: auto;
+    }
+    .ab-text > div{
+        gap: 20px;
     }
 }
 
@@ -327,12 +410,12 @@ hr{
     transform: translateX(0px);
 }
 
-.next-matter{
+.next-matter p{
     opacity: 0; /* Initially hidden */
     transform: translateY(100px); /* Move down */
     transition: opacity 2s ease, transform 1s ease; /* Smooth transition */
 }
-.next-matter.animate {
+.next-matter p.animate {
     opacity: 1;
     transform: translateY(0px);
 }
