--- a/pages/about_style.css
+++ b/pages/about_style.css
@@ -71,6 +71,7 @@ th, td {
 }
 
 .about-matter{
+    overflow: hidden;
     display: grid;
     grid-template-columns: 1fr 1fr;
     /* grid-template-columns:  0fr 1fr 1fr 1fr; */
@@ -399,16 +400,28 @@ hr{
 }
 
 .swipe-con{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-top: 25%;
-    padding-bottom: 15%;
     background-size: 100%;
     background-position-y: 30px;
     background-repeat: no-repeat;
     background-color: #ffffff;
     background-image: url('/images/blue_new1.png');
+}
+.swipe-con .well{
+    margin: 0 10%;
+    margin-top: 20%;
+    font-size: 43px;
+    font-weight: 500;
+    padding-left: 10px;
+    color: #1623b3;
+    display: inline-block;
+    border-left: 4px solid #e20bc2;
+}
+.slidcontainer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 10%;
+    padding-bottom: 15%;
 }
 .card-list{
     display: flex;
@@ -431,9 +444,10 @@ hr{
     box-shadow: 2px 3px 10px 0 rgba(0, 0, 0, 0.263);
 }
 .card-link:hover{
-    transition: .3s ease-in-out;
-    transform: scale(1.06);
-    border: 2px solid #085f8b;
+    transition: .3s ease;
+    transform: translateY(-10px);
+    border: 2px solid #0970a3;
+    box-shadow: 6px 9px 10px 0 rgba(0, 0, 0, 0.263);
 }
 
 .card-list .card-link .card-image{
@@ -479,5 +493,41 @@ hr{
     }
     .card-item h2{
         font-size: 20px;
+    }
+}
+
+.card-item:nth-child(1) {
+    opacity: 0; /* Initially hidden */
+    transform: translateY(100px); /* Move down */
+    transition: opacity 2s ease, transform 1s ease; /* Smooth transition */
+}
+.card-item:nth-child(1).animate {
+    opacity: 1;
+    transform: translateY(0px);
+}
+
+.card-item:nth-child(2) {
+    opacity: 0; /* Initially hidden */
+    transform: translateY(100px); /* Move down */
+    transition: opacity 2s ease, transform 1.5s ease; /* Smooth transition */
+}
+.card-item:nth-child(2).animate {
+    opacity: 1;
+    transform: translateY(0px);
+}
+
+.card-item:nth-child(3) {
+    opacity: 0; /* Initially hidden */
+    transform: translateY(100px); /* Move down */
+    transition: opacity 2s ease, transform 2s ease; /* Smooth transition */
+}
+.card-item:nth-child(3).animate {
+    opacity: 1;
+    transform: translateY(0px);
+}
+
+@media(max-width:626px){
+    .swipe-con .well{
+        font-size: 30px;
     }
 }
