--- a/pages/PR folder/wellfare-pages/wellfare-style.css
+++ b/pages/PR folder/wellfare-pages/wellfare-style.css
@@ -1,8 +1,8 @@
-.ed-intro-line{
+.intro-line{
     padding: 10% 5%;
     background-color: #001758;
 }
-.ed-intro-line h1{
+.intro-line h1{
     color: #e5e5e5;
     font-weight: 500;
     font-size: 42px;
@@ -20,7 +20,7 @@
     color: #0a294d;
 }
 @media(max-width:720px){
-    .ed-intro-line h1{
+    .intro-line h1{
         font-weight: 500;
         font-size: 30px;
     }
