--- a/style.css
+++ b/style.css
@@ -49,10 +49,10 @@ nav li{
     height: 80px;
 }
 nav a{
-    height: 100%;
     padding: 0 20px;
     text-decoration: none;
     display: flex;
+    height: fit-content;
     align-items: center;
     color: black;
     transition: .3s ease;
@@ -62,6 +62,7 @@ nav a img{
 }
 nav a:hover{
     background-color: rgb(130, 198, 249);
+    border-bottom: 2px solid #000000;
 }
 nav li:first-child{
     margin-right: auto;
