--- a/pages/about_style.css
+++ b/pages/about_style.css
@@ -75,18 +75,14 @@ th, td {
     overflow: hidden;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    /* grid-template-columns:  0fr 1fr 1fr 1fr; */
     background-color: #ffffff;
     border: 2px solid rgb(255, 255, 255);
-    /* padding: 20px; */
-    padding: 10% 4%;
+    padding: 10% 13%;
     padding-bottom: 40px;
-    /* font-size: 18px; */
     text-align: justify;
     justify-content: space-around;
     background-image: url('/images/wav.png');
     background-size: cover;
-    /* background-position: 0 -50px; */
     background-repeat: no-repeat;
 }
 .first-img{
@@ -108,9 +104,10 @@ th, td {
 
 .ab-text h3{
     font-weight: 400;
+    font-size: 16px;
 }
 .ab-text h1{
-    font-size: 40px;
+    font-size: 34px;
 }
 .dream-line{
     padding: 20px 0;
@@ -421,8 +418,8 @@ hr{
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-top: 10%;
-    padding-bottom: 15%;
+    padding-top: 5%;
+    padding-bottom: 2%;
 }
 .card-list{
     display: flex;
@@ -437,7 +434,7 @@ hr{
     width: 300px;
     display: block;
     background-color: #ffffff;
-    border: 2px solid #34bbff;
+    border: 2px solid rgb(44, 44, 44);
     padding: 17px;
     margin: 0 10px;
     border-radius: 12px;
@@ -447,7 +444,7 @@ hr{
 .card-link:hover{
     transition: .3s ease;
     transform: translateY(-10px);
-    border: 2px solid #0970a3;
+    border: 2px solid #55d5f8;
     box-shadow: 6px 9px 10px 0 rgba(0, 0, 0, 0.263);
 }
 
